--- a/style.css
+++ b/style.css
@@ -119,10 +119,12 @@ header .row {
     margin-bottom: 25px;
     transition: transform 0.5s;
 }
-.col-4:hover{
+
+.col-4:hover {
     transform: translateY(-5px);
     transform: scale(1.1);
 }
+
 .title {
     text-align: center;
     margin: 0 80px;
@@ -142,17 +144,100 @@ header .row {
     left: 50%;
     transform: translateX(-50%);
 }
-h4{
+
+h4 {
     color: #555;
     font-weight: normal;
 }
-.col-4 p{
+
+.col-4 p {
     font-size: 14px;
 }
-.rating i{
+
+.rating i {
     color: #ff523b;
 }
 
-.offer{
+.offer {
     background: radial-gradient(#fff, #ffd6d6);
+    margin-top: 80px;
+    padding: 30px 0;
+}
+
+/* .col-2 *{
+    border: 1px solid red;
+} */
+.col-2 .offer-img {
+    padding: 50px;
+}
+
+small {
+    color: #555;
+}
+
+/* --- testimonial --- */
+.testi {
+    padding-top: 100px;
+}
+
+.testi .col-3 {
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.5s;
+}
+
+.testi .col-3 img {
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.testi .col-3:hover {
+    transform: translateY(-10px);
+}
+
+.fa-quote-left {
+    font-size: 34px;
+    color: #ff523b;
+}
+
+.col-3 p {
+    font-size: 12px;
+    margin: 12px 0;
+    color: #777;
+}
+
+.testi .col-3 h3 {
+    font-weight: 600;
+    font-size: 16px;
+    color: #555;
+}
+.brands{
+    margin: 100px auto;
+}
+.col-5{
+    width: 160px;
+}
+.col-5 img{
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(100%);
+    transition: filter 0.5s;
+}
+.col-5 img:hover{
+    filter: grayscale(0);
+}
+
+/* ----- Footer ------  */
+.footer{
+    background: black;
+    color: #8a8a8a;
+    font-size: 14px;
+    padding: 60px 20px;
+}
+
+.footer p{
+    
 }
