--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     padding: 20px;
     transition: margin-bottom 0.5s;
-    
+
 }
 
 nav {
@@ -323,31 +323,41 @@ footer-col-4 {
         overflow: hidden;
         transition: max-height 0.5s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin-right: 50px;
         margin-top: 10px;
         margin-bottom: 10px;
     }
-    
-    nav ul li a{
+
+    nav ul li a {
         color: #fff;
     }
+
     .menu-icon {
         display: block;
         cursor: pointer;
     }
+
+    .col-4 {
+        flex-basis: 50%;
+    }
+
     /* .navbar{
         margin-bottom: 200px;
     } */
 }
 
 /* media query for less than 600px  */
-@media only screen and (max-width: 600px){
-    .row{
+@media only screen and (max-width: 600px) {
+    .row {
         text-align: center;
     }
-    .col-2, .col-3, .col-4{
+
+    .col-2,
+    .col-3,
+    .col-4 {
         flex-basis: 100%;
     }
 }
